Week 4 Oauth ready for render testing
