# routes/index.js
@@ -1,5 +1,6 @@
 const routes = require('express').Router();
 const asyncHandler = require('../errors/asyncHandler.js');
+const authenticate = require('../validators/authenticate.js');
 
 const {
   validAccountRules,
@@ -31,32 +32,48 @@ routes.get('/account', asyncHandler(getAllAccounts));
 routes.get('/account/:accountId', asyncHandler(getSingleAccount));
 routes.post(
   '/account',
+  authenticate,
   validAccountRules(),
   validateNew,
   asyncHandler(createAccount)
 );
 routes.put(
   '/account/:accountId',
+  authenticate,
   validAccountRules(),
   validateNew,
   asyncHandler(updateAccount)
 );
-routes.delete('/account/:accountId', asyncHandler(deleteAccount));
+routes.delete('/account/:accountId', authenticate, asyncHandler(deleteAccount));
 
 routes.get('/transaction', asyncHandler(getAll));
 routes.get('/transaction/:transactionId', asyncHandler(getSingleTransaction));
 routes.post(
   '/transaction',
+  authenticate,
   validTransactionRules(),
   validateNewTransaction,
   asyncHandler(createTransaction)
 );
 routes.put(
   '/transaction/:transactionId',
+  authenticate,
   validTransactionRules(),
   validateNewTransaction,
   asyncHandler(updateTransaction)
 );
-routes.delete('/transaction/:transactionId', asyncHandler(deleteTransaction));
+routes.delete(
+  '/transaction/:transactionId',
+  authenticate,
+  asyncHandler(deleteTransaction)
+);
+
+routes.get('/auth/test', (req, res) => {
+  res.json({
+    authenticated: req.isAuthenticated(),
+    user: req.user,
+    session: req.session,
+  });
+});
 
 module.exports = routes;
